primeira parte do site

--- a/index.html
+++ b/index.html
@@ -1,21 +1,127 @@
 <!DOCTYPE html>
-<!-- saved from url=(0033)https://www.orionsolucoes.com.br/ -->
-<html lang="pt-BR" >
+<html lang="pt-BR">
 
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="referrer" content="strict-origin-when-cross-origin">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <title>Título da Página</title>
+  <link rel="stylesheet" type="text/css" href="/css/default.css">
+  <link rel="stylesheet" type="text/css" href="/css/home.css">
+  <link rel="stylesheet" type="text/css" href="/css/cards.css">
+  <link rel="stylesheet" type="text/css" href="/css/gestao.css">
+  <link rel="stylesheet" type="text/css" href="/css/virtualizacao.css">
 
-    <style src="/css/default.css"></style>
-    <style src="/css/home.css"></style>
-  </head>
+</head>
 
-  <body>
-    <section class="home">
+<body>
+  <section class="home flex background">
+    <div id="astronauta"></div>
+  </section>
 
-    </section>
-  </body>
+  <div class="quemSomos flex index">
+    <p>Quem somos</p>
+  </div>
+
+  <section id="cards" class="flex index background">
+
+    <div id="surgimento" class="card flex">
+      <h3>Surgimento</h3>
+      <p>
+        A orion surgiu do sonho de trazer soluções tecnológicas
+        para os pequenos empreendedores do interior do estado
+        do Ceara de forma prática e acessível.
+      </p>
+    </div>
+
+    <div id="missao" class="card flex">
+      <h3>Missão</h3>
+      <p>
+        A orion surgiu do sonho de trazer soluções tecnológicas
+        para os pequenos empreendedores do interior do estado
+        do Ceara de forma prática e acessível.
+      </p>
+    </div>
+
+    <div id="principios" class="card flex">
+      <h3>Princípios</h3>
+      <p>
+        A orion surgiu do sonho de trazer soluções tecnológicas
+        para os pequenos empreendedores do interior do estado
+        do Ceara de forma prática e acessível.
+      </p>
+    </div>
+  </section>
+
+  <div class="quemSomos flex index">
+    <p>Gestão empresarial</p>
+  </div>
+
+  <section id="gestaoText" class="flex index background">
+    <div class="text">
+      <h3>Por que sua empresa deveria investir em um sistema de gestão empresarial? </h3>
+
+      <ul>
+        <li>
+          O principal objetivo é gerir o seu negócio de forma totalmente automatizada e holística. A implantação de um
+          sistema de gestão reduz drasticamente a possibilidade de falhas e fraudes e evita problemas com o fisco, pois
+          permite uma análise abrangente dos dados em todos os setores da empresa.
+        </li>
+        <li>
+          Permite o desenvolvimento mais rápido de requisitos e captura dados precisos que suportam maior
+          produtividade;
+        </li>
+        <li>
+          Por meio das informações produzidas pelo sistema, haverá informações estratégicas que poderão ser utilizadas para tomar decisões importantes sobre os rumos da empresa; 
+        </li>
+        <li>
+          O software é desenvolvido para atender todas as necessidades da empresa. A plataforma conecta vários setores, como finanças, marketing, relacionamento com clientes e gerenciamento de estoque;  
+        </li>
+        <li>
+          Configurar seu sistema pode ajudar muito a garantir que sua empresa sempre tenha um serviço relevante e consistente. Essas opções são oferecidas pelos melhores sistemas do mercado;  
+        </li>
+
+      </ul>
+
+    </div>
+
+  </section>
+
+  <div class="quemSomos flex index">
+    <p>Virtualização de processos</p>
+  </div>
+
+  <section id="virtualizacao" class="flex index background">
+
+    <div class="virtualizacaoIMG flex"> 
+      <!-- <div> IMAGEM </div> -->
+    </div>
+
+    <div class="virtualizacaoUL flex">
+      <ul>
+        <li>Tem dificuldade em organizar toda a papelada da empresa para os diferentes setores?</li>
+        <li>Se alguém perder um recibo ou uma nota fiscal, há uma confusão no financeiro?</li>
+        <li>
+          Você precisa da Virtualização de Processos Orion! Uma consultoria especializada em adequar a rotina de trabalho dos nossos clientes para o seu computador! Com nossa equipe de experts, adequamos a sua forma de trabalhar para o seus aparelhos (computador, celular ou tablet).
+        </li>
+        <li>
+          Podemos montar aplicativos, gráficos inteligentes, sites, tudo isso dentro da sua realidade! Assim, pequenos problemas de perca de recursos irão sumir da sua corporação.
+        </li>
+      </ul>
+    </div>
+
+    <div id="slider">
+      <div id="slides">
+
+      </div>
+    </div>
+  </section>
+
+  <div class="quemSomos flex index">
+    <p>Suporte de T.I</p>
+  </div>
+
+</body>
 
 </html>
