--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>Título da Página</title>
-  <link rel="stylesheet" type="text/css" href="/css/default.css">
-  <link rel="stylesheet" type="text/css" href="/css/home.css">
-  <link rel="stylesheet" type="text/css" href="/css/cards.css">
-  <link rel="stylesheet" type="text/css" href="/css/gestao.css">
-  <link rel="stylesheet" type="text/css" href="/css/virtualizacao.css">
+  <link rel="stylesheet" type="text/css" href="./css/default.css">
+  <link rel="stylesheet" type="text/css" href="./css/home.css">
+  <link rel="stylesheet" type="text/css" href="./css/cards.css">
+  <link rel="stylesheet" type="text/css" href="./css/gestao.css">
+  <link rel="stylesheet" type="text/css" href="./css/virtualizacao.css">
 
 </head>
 
