--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Título da Página</title>
   <link rel="stylesheet" type="text/css" href="./css/default.css">
   <link rel="stylesheet" type="text/css" href="./css/home.css">
-  <link rel="stylesheet" type="text/css" href="./css/cards.css">
+  <link rel="stylesheet" type="text/css" href="./css/quemSomos.css">
   <link rel="stylesheet" type="text/css" href="./css/gestao.css">
   <link rel="stylesheet" type="text/css" href="./css/virtualizacao.css">
   <link rel="stylesheet" type="text/css" href="./css/sliders.css">
@@ -28,7 +28,7 @@
 
   </header>
 
-  <section class="home flex background">
+  <section id="home"class="flex background defaultSection">
     <div id="astronauta"></div>
 
     <div id="orion" class="flex">
@@ -43,11 +43,11 @@
     <div id="sun"></div>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>Quem somos</p>
   </div>
 
-  <section id="cards" class="flex index background defaultSection">
+  <section id="quemSomos" class="flex index background defaultSection">
 
     <div id="surgimento" class="card flex">
       <h3>Surgimento</h3>
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>Gestão empresarial</p>
   </div>
 
@@ -111,7 +111,7 @@
 
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>Virtualização de processos</p>
   </div>
 
@@ -161,7 +161,7 @@
   </div>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>Suporte de T.I</p>
   </div>
 
@@ -173,7 +173,7 @@
     </ul>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>Outros serviços</p>
   </div>
 
@@ -201,7 +201,7 @@
     </div>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>clientes</p>
   </div>
 
@@ -212,7 +212,7 @@
     <div id="brall" class="clientesIcon"></div>
   </section>
 
-  <div class="quemSomos flex index">
+  <div class="divisor flex index">
     <p>fale conosco</p>
   </div>
 
@@ -251,7 +251,7 @@
 
   </section>
 
-  <footer id="footer" class="quemSomos flex">
+  <footer id="footer" class="divisor flex">
     <p>
       Orion Soluções em Tecnologia Unipessoal LTDA. CNPJ: 35.674.634/0001-04. 		
       Av. Santos Dumont, 2122. Sala 1207 - Fortaleza/CE.
