Ajeitando o Media Querys

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="./css/clientes.css">
   <link rel="stylesheet" type="text/css" href="./css/contato.css">
   <link rel="stylesheet" type="text/css" href="./css/footer.css">
+  <link rel="stylesheet" type="text/css" href="./css/mediaQuery.css">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
@@ -165,7 +166,7 @@
     <p>Suporte de T.I</p>
   </div>
 
-  <section id="suporte" class="flex index defaultSection">
+  <section id="suporte" class="flex index background defaultSection">
     <ul>
       <li>Hoje tudo está conectado! Desde o setor fiscal até o almoxarifado. Cada dia mais usamos mais Apps que facilitam nossa vida e aproximam as pessoas.</li>
       <li>Por isso você DEVE ter uma equipe de T.I. para garantir o bom funcionamento, o "carinha do computador" é um personagem essencial na sua empresa.</li>
