Feito alguns ajustes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
   <link rel="stylesheet" type="text/css" href="./css/footer.css">
   <link rel="stylesheet" type="text/css" href="./css/mediaQuery.css">
 
-  <!-- SWIPER CSS -->
-  <link rel="stylesheet" href="./css/swiper-bundle.min.css">
-
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
@@ -36,7 +33,7 @@
     <div id="astronauta"></div>
 
     <div id="orion" class="flex">
-      <p id="orionTitle">.orion</p>
+      <p id="orionTitle"> .orion</p>
 
       <div id="solucTec">
         <p>Soluções</p>
@@ -275,11 +272,14 @@
     <ion-icon name="arrow-up-outline"></ion-icon>
   </a>
 
+  <div class="star"></div>
+
   <!-- SLIDER CONTROLLER -->
   <script src="./js/sliderController.js"></script>
 
   <!-- CARD QUEM SOMOS CONTROLLER -->
   <script src="./js/cardsController.js"></script>
+
 
   <!-- ION-ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
