Correcao de bug nas imagens

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 
     <div class="virtualizacaoIMG flex"> 
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original-wordmark.svg" />
-      <img src="/images/express.png" />
+      <img src="./images/express.png" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" />
-      <img src="/images/poewrbi.png" />
-      <img src="/images/powerapp.png" />
+      <img src="./images/poewrbi.png" />
+      <img src="./images/powerapp.png" />
     </div>
 
     <div class="virtualizacaoUL flex">
@@ -160,13 +160,13 @@
         <input type="radio" name="radio-bnt" id="radio3">
 
         <div class="slide first ">
-            <img src="/images/Frame 31.png" alt="Imagem1">
+            <img src="./images/Frame 31.png" alt="Imagem1">
         </div>
         <div class="slide">
-            <img src="/images/Frame 32.png" alt="Imagem2">
+            <img src="./images/Frame 32.png" alt="Imagem2">
         </div>
         <div class="slide">
-            <img src="/images/Frame 33.png" alt="Imagem3">
+            <img src="./images/Frame 33.png" alt="Imagem3">
         </div>
       </div>
 
@@ -254,11 +254,11 @@
           <p>Redes Sociais:</p>
           <div class="socialsLogos flex">
             <a href="https://www.linkedin.com/company/orionsoltec/">
-              <img class="linkedinLogo sLogo" src="/images/linkedin.png" />
+              <img class="linkedinLogo sLogo" src="./images/linkedin.png" />
             </a>
           
             <a href="https://www.instagram.com/orionsoltec/">
-              <img class="instagramLogo sLogo" src="/images/insta.png"/>
+              <img class="instagramLogo sLogo" src="./images/insta.png"/>
             </a>
             
           </div>
