Tirado o # do hrf para subir para home

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </p>
   </footer>
 
-  <a id="homeButton" class="flex" href="#">
+  <a id="homeButton" class="flex" href="">
     <ion-icon name="arrow-up-outline"></ion-icon>
   </a>
 
