Adicionado um fundo de estrelas

--- a/index.html
+++ b/index.html
@@ -285,14 +285,15 @@
     <ion-icon name="arrow-up-outline"></ion-icon>
   </a>
 
-  <div class="star"></div>
-
   <!-- SLIDER CONTROLLER -->
   <script src="./js/sliderController.js"></script>
 
   <!-- CARD QUEM SOMOS CONTROLLER -->
   <script src="./js/cardsController.js"></script>
 
+
+   <!-- STARS CONTROLLER -->
+   <script src="./js/starsBackground.js"></script>
 
   <!-- ION-ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
