Ajustes no email e tirado os console.log

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div id="emailPanel" class="flex displayNone">
       <div id="emailContent" class="flex">
         <!-- comercial@orionsolucoes.com.br -->
-        <form action="mailto:gldhperes@gmail.com" method="POST" enctype="text/plain" class="flex">
+        <form action="mailto:gldhperes@gmail.com" method="POST" enctype="multipart/form-data" class="flex">
           <p>Seu Nome:</p>
           <input name="nome" type="text" required />
           <p>E-Mail:</p>
