--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div id="emailPanel" class="flex displayNone">
       <div id="emailContent" class="flex">
         <!-- comercial@orionsolucoes.com.br -->
-        <form class="flex" action="mailto:gldhperes@gmail.com" method="POST" autocomplete="off" action="">
+        <form class="flex" action="mailto:gldhperes@gmail.com" method="POST" autocomplete="off" enctype="application/x-www-form-urlencoded" action="">
           <p>Seu Nome:</p>
           <input name="nome" type="text" required />
           <p>E-Mail:</p>
