Fixado os cards na area quemSomos para sempre aparecer os textos e ajuste de responsividade

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <h3 id="cardShowTitle"></h3>
         <p id="cardShowText"></p>
   
-        <button id="cardShowBtn">
+        <button id="cardShowBtn" class="flex">
           <p id="cardShowBtnText"></p>
           <ion-icon name='mail-outline'></ion-icon>
         </button>
@@ -294,8 +294,7 @@
   
 
   <!-- CARD QUEM SOMOS CONTROLLER -->
-  <script src="./js/cardsController.js"></script>
-
+  <!-- <script src="./js/cardsController.js"></script> -->
 
   <!-- STARS CONTROLLER -->
   <script src="./js/starsBackground.js"></script>
