--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div id="astronauta"></div>
 
     <div id="orion" class="flex">
-      <p id="orionTitle"> .orion</p>
+      <!-- <p id="orionTitle"> .orion</p>
 
       <div id="solucTec">
         <p>Soluções</p>
         <p>Tecnológicas</p>
-      </div>
+      </div> -->
     </div>
 
     <div id="sun"></div>
