Adicionado Titulo e Icone na Aba, adicionado efeitos animados em quem somos, ajustado responsividade e Logo da Orion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="referrer" content="strict-origin-when-cross-origin">
-  <title>Título da Página</title>
+
+  <title>.Orion Soluções</title>
+  <link rel="icon" type="image/png" href="./images/orionIcon.png"/>
   <link rel="stylesheet" type="text/css" href="./css/default.css">
   <link rel="stylesheet" type="text/css" href="./css/home.css">
   <link rel="stylesheet" type="text/css" href="./css/quemSomos.css">
@@ -29,14 +31,7 @@
   <section id="home"class="flex background defaultSection">
     <div id="astronauta"></div>
 
-    <div id="orion" class="flex">
-      <!-- <p id="orionTitle"> .orion</p>
-
-      <div id="solucTec">
-        <p>Soluções</p>
-        <p>Tecnológicas</p>
-      </div> -->
-    </div>
+    <div id="orion" class="flex"></div>
 
     <div id="sun"></div>
   </section>
@@ -48,31 +43,39 @@
 
   <section id="quemSomos" class="flex index background defaultSection">
 
-    <div id="surgimento" class="card flex">
-      <h3>Surgimento</h3>
-      <p>
-        A orion surgiu do sonho de trazer soluções tecnológicas
-        para os pequenos empreendedores do interior do estado
-        do Ceara de forma prática e acessível.
-      </p>
-    </div>
+    <div id="planeta"></div>
 
-    <div id="missao" class="card flex">
-      <h3>Missão</h3>
-      <p>
-        Nossa missão é garantir que todos os clientes tenham seus processos automatizados de forma que não afete a sua produtividade.
-      </p>
-    </div>
+    <div id="estacao"></div>
 
-    <div id="principios" class="card flex">
-      <h3>Princípios</h3>
-      <ul>
-        <li>Coletividade</li>
-        <li>Criatividade</li>
-        <li>Inovação</li>
-        <li>Comprometimento</li>
-      </ul>
-    </div>
+    <!-- <div id="quemSomosText"></div> -->
+
+    <!-- <div id="quemSomosCards" class="flex"> -->
+      <div id="surgimento" class="card flex">
+        <h3>Surgimento</h3>
+        <p>
+          A orion surgiu do sonho de trazer soluções tecnológicas
+          para os pequenos empreendedores do interior do estado
+          do Ceara de forma prática e acessível.
+        </p>
+      </div>
+  
+      <div id="missao" class="card flex">
+        <h3>Missão</h3>
+        <p>
+          Nossa missão é garantir que todos os clientes tenham seus processos automatizados de forma que não afete a sua produtividade.
+        </p>
+      </div>
+  
+      <div id="principios" class="card flex">
+        <h3>Princípios</h3>
+        <ul>
+          <li>Coletividade</li>
+          <li>Criatividade</li>
+          <li>Inovação</li>
+          <li>Comprometimento</li>
+        </ul>
+      </div>
+    <!-- </div> -->
   </section>
 
   <!-- NOSSOS SERVICOS -->
