Ajustado botao de ir para o topo

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </p>
   </footer>
 
-  <a id="homeButton" class="flex" href="">
+  <a id="homeButton" class="flex" href="#home">
     <ion-icon name="arrow-up-outline"></ion-icon>
   </a>
 
