Ajustado #rocket no header, texto no footer e tamanho do texto em #cardShowContent

--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
 
   <footer id="footer" class="divisor flex">
     <p>
-      Orion Soluções em Tecnologia Unipessoal LTDA. CNPJ: 35.674.634/0001-04.
-      Av. Santos Dumont, 2122. Sala 1207 - Fortaleza/CE.
+      © Copyright 2023 .Orion Soluções Tecnologicas – Todos os direitos reservados.
     </p>
   </footer>
 
@@ -373,8 +372,10 @@
   <script src="./js/saibaMaisCardControl.js"></script>
 
   <!-- SAIBA MAIS CARDS -->
-  <script type="module">
-    import { openCard } from "./js/saibaMaisCard.js"
+  <script src="./js/saibaMaisCard.js"></script>
+
+  <!-- <script type="module"> -->
+    <!-- import { openCard } from "./js/saibaMaisCard.js"
 
     let card = $(".cardS")
 
@@ -399,9 +400,9 @@
 
     $("#cardShowClose").click(function (e) {
       close()
-    });
+    }); -->
 
-  </script>
+  <!-- </script> -->
 
   <script>
     
